[package]
name = "influx-and-delta"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.95"
arrow = "53.0.0"
arrow-cast = {version = "53.0.0", features = ["prettyprint"]}
async-trait = "0.1.85"
chrono = "0.4.39"
chrono-tz = "0.10.0"
clap = { version = "4.5.26", features = ["derive"] }
comfy-table = "7.1.3"
datafusion = "44.0.0"
deltalake = {version = "0.23.2", features = ["datafusion"]}
futures = "0.3.31"
hashbrown = "0.15.2"
insta = "1.42.0"
num-traits = "0.2.19"
rand = "0.8.5"
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.135"
snafu = "0.8.5"
tokio = "1.43.0"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
uuid = "1.11.1"